Light integration with spring framework plus mavenification

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
 	<groupId>com.postmark</groupId>
 	<artifactId>postmark-client</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
 		<spring.version>3.0.5.RELEASE</spring.version>
@@ -45,6 +44,7 @@
 		</dependency>
 	</dependencies>
 
+	<version>0.1</version>
 	<build>
 		<plugins>
 			<plugin>
